<resources>
    <string name="app_name">SourceCodeParse</string>
    <string name="open_intent_service">开启服务</string>
    <string name="Loader">Loader</string>
    <string name="IntentService">IntentService</string>
    <string name="TakePhoto">TakePhoto</string>
    <string name="FileProvider">FileProvider</string>
    <string name="design">design</string>
    <string name="jump_activity_b">跳转至Bactivity</string>
    <string name="jump_activity_a">跳转至AActivity</string>
    <string name="activity_debug">activity相关测试</string>
    <string name="activityA">activityA</string>
    <string name="activityB">activityB</string>
    <string name="activityC">activityC</string>
    <string name="activityModel">activity启动模式</string>
    <string name="shadow">shadow</string>
    <string name="event">事件分发</string>
    <string name="anim">属性动画</string>
    <string name="translation">平移</string>
    <string name="rotation">旋转</string>
    <string name="scale">缩放</string>
    <string name="alpha">渐变</string>
    <string name="anim_set">组合动画</string>
    <string name="valueAnimator">valueAnimator</string>
    <string name="moneyAnim">金额动画</string>
    <string name="guess_you_like">-&#160;&#160;猜你喜欢&#160;&#160;-</string>
    <string name="layoutConvertBitmap">布局文件生成Bitmap</string>
    <string name="viewConvertBitmap">View生成bitmap</string>
    <string name="listConvertBitmap">列表生成bitmap</string>
    <string name="showLoadingDialog">显示加载dialog</string>
</resources>
