<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_intent_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IntentService"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loader"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_fileProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FileProvider"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_activity_debug"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:text="@string/activity_debug"
        android:layout_height="wrap_content" />

</LinearLayout>
