<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLayoutConvertBitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layoutConvertBitmap"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnViewConvertBitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewConvertBitmap"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnListConvertBitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listConvertBitmap"
        android:textAllCaps="false" />


</LinearLayout>